testsuite/tests/impredicative/T17332.stderr
T17332.hs:13:7: error: [GHC-05617]
    • Could not solve: a
        arising (via a quantified constraint) from a use of ‘MkDict’
      When trying to solve the quantified constraint
        forall (a :: Constraint). a
        arising from a use of ‘MkDict’
    • In the expression: MkDict
      In an equation for ‘aux’: aux = MkDict

